--- a/index.html
+++ b/index.html
@@ -1,49 +1,110 @@
-<!DOCTYPE html>
-<html lang="en" >
-
+﻿<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>CSS Grid</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
+    <meta charset="UTF-8">
+    <title>Nesst</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 
-  <section id="student-feature">
-	<div id="focus">
-		
-	</div>
-	
-	<div id="position-one">
-		
-	</div>
-	
-	<div id="position-two">
-		<img src="https://images.unsplash.com/photo-1415369629372-26f2fe60c467?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80" alt="cat">
-	</div>
-	
-	<div id="position-three">
-		
-	</div>
-	
-	<div id="bio">
-		
-	</div>
-	
-	<div id="project-detail">
-		
-	</div>
-</section>
+    <main>
+        <nav>
+            <aside class="main-nav">
+                <img src="assets/logo.png" alt="site-logo">
+                <a href="">About</a>
+                <a href="">Gallery</a>
+                <a href="">Documents</a>
+            </aside>
 
-<a href="web_1_project_2/student-detail.html">Student Detail</a>
-  
-  
+            <aside class="social-nav">
+                <div class="social-links">
+                    <a href="facebook.com"><img class="social-icons" src="assets/icons/facebook.png" alt="facebook-logo"></a>
+                    <a href="twitter.com"><img class="social-icons" src="assets/icons/twitter.png" alt="twitter-logo"></a>
+                </div>
+                <div class="login-nav">
+                    <p><a href=" ">Login </a> | <a href=" ">Register</a></p>
+                </div>
+            </aside>
+        </nav>
+
+        <header class="slideshow">
+            <!--slideshow gallery-->
+            <img class="arrow" src="assets/arrows/left_arrow.png" alt="Left">
+            <h2 id="slideshow-caption" class="light">Alexis Avalos, Typography Book</h2>
+            <img class="arrow" src="assets/arrows/right_arrow.png" alt="Right">
+        </header>
+
+        <section class="center">
+            <!--recent post gallery-->
+            <h2 id="intro">Nessst is a network showcasing student solutions from Eastern Washington University</h2>
+            <div class="tiled-gallery">
+                <img class="pic" src="assets/images/dailies.png" alt="design-pic">
+                <img class="pic" src="assets/images/ProductPackaging" alt="design-pic">
+                <img class="pic" src="assets/images/AA_GO_Exercise_Page_04.jpg" alt="design-pic">
+                <img class="pic" src="assets/images/AA_BC_Layout_Final.png" alt="design-pic">
+                <img class="pic" src="assets/images/AA_GO_Exercise_Page_09.jpg" alt="design-pic">
+                <img class="pic" src="assets/images/AA_Page_I.png" alt="design-pic">
+                <img class="pic" src="assets/images/AA_Page_K.png" alt="design-pic">
+                <img class="pic" src="assets/images/AA_Pages_X.png" alt="design-pic">
+                <img class="pic" src="assets/images/AA_GO_Exercise_Page_13.jpg" alt="design-pic">
+                <img class="pic" src="assets/images/AA_GO_Exercise_Page_15.jpg" alt="design-pic">
+                <img class="pic" src="assets/images/dailies_2.png" alt="design-pic">
+                <img class="pic" src="assets/images/AA_Page_V.png" alt="design-pic">
+            </div>
+            <a class="button" href="pages/student.html"><h2 class="light">View More...</h2></a>
+        </section>
+    </main>
+    <footer>
+        <section class="footer-bar">
+            <img src="assets/icons/bird.png" alt="bird">
+            <p class="light" class="center">Get ready for something big. #nessst is coming! <span>about 20 minutes ago...</span></p>
+        </section>
+
+        <section class="footer-content">
+            <nav class="footer-nav">
+                <div class="main-footer-nav">
+                    <img id="footer-logo" src="assets/logo.png" alt="site-logo">
+                    <a href="">About</a>
+                    <a href="">Gallery</a>
+                    <a href="">Documents</a>
+                </div>
+                <div class="search-bar">
+                    <h3>Looking for Someone?</h3>
+                    <p class="light">Find who you're looking for</p>
+                    <input id="search" type="text" placeholder="Search..">
+                </div>
+            </nav>
+
+            <div class="about">
+                <h3>Visual Communication Design</h3>
+                <p class="light">
+                    A major in Visual Communication Design educates and prepares
+                    students to conceive and produce creative solutions to satisfy
+                    the visual communication needs of society.
+                </p>
+                <h3>read more...</h3>
+            </div>
+
+            <div class="mini-gallery">
+                <h3>View Gallery</h3>
+                <div class="tiled-gallery">
+                    <img class="pic" src="assets/images/dailies.png" alt="design-pic">
+                    <img class="pic" src="assets/images/ProductPackaging" alt="design-pic">
+                    <img class="pic" src="assets/images/AA_GO_Exercise_Page_04.jpg" alt="design-pic">
+                    <img class="pic" src="assets/images/AA_BC_Layout_Final.png" alt="design-pic">
+                    <img class="pic" src="assets/images/AA_GO_Exercise_Page_09.jpg" alt="design-pic">
+                    <img class="pic" src="assets/images/AA_Page_I.png" alt="design-pic">
+                    <img class="pic" src="assets/images/AA_Page_K.png" alt="design-pic">
+                    <img class="pic" src="assets/images/AA_Pages_X.png" alt="design-pic">
+                    <img class="pic" src="assets/images/AA_GO_Exercise_Page_13.jpg" alt="design-pic">
+                    <img class="pic" src="assets/images/AA_GO_Exercise_Page_15.jpg" alt="design-pic">
+                    <img class="pic" src="assets/images/dailies_2.png" alt="design-pic">
+                    <img class="pic" src="assets/images/AA_Page_V.png" alt="design-pic">
+                </div>
+            </div>
+        </section>
+
+    </footer> 
 
 </body>
-
 </html>
