--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         </nav>
 
         <header class="slideshow">
-            <!--slideshow gallery-->
+          
             <img class="arrow" src="assets/arrows/left_arrow.png" alt="Left">
             <h2 id="slideshow-caption" class="light">Alexis Avalos, Typography Book</h2>
             <img class="arrow" src="assets/arrows/right_arrow.png" alt="Right">
         </header>
 
         <section class="center">
-            <!--recent post gallery-->
+        
             <h2 id="intro">Nessst is a network showcasing student solutions from Eastern Washington University</h2>
             <div class="tiled-gallery">
                 <img class="pic" src="assets/images/dailies.png" alt="design-pic">
@@ -51,7 +51,7 @@
                 <img class="pic" src="assets/images/dailies_2.png" alt="design-pic">
                 <img class="pic" src="assets/images/AA_Page_V.png" alt="design-pic">
             </div>
-            <a class="button" href="pages/student.html"><h2 class="light">View More...</h2></a>
+            <a class="button" href="pages/student-detail.html"><h2 class="light">View More...</h2></a>
         </section>
     </main>
     <footer>
