--- a/pages/student-detail.html
+++ b/pages/student-detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Nesst: Student Profile</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -54,7 +54,7 @@
                             <a href="twitter.com"><img class="social-icons" src="../assets/icons/twitter.png" alt="twitter-logo"></a>
                         </div>
                     </div>
-                    <img class="profile-pic" src="../assets/images/self-portrait.png" alt="design-pic">
+                    <img class="profile-pic" src="../assets/images/self-portrait.png" alt="pic">
                 </div>
                 <div id="project-info">
                     <h2>Typography book</h2>
