--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
         </nav>
 
         <header class="slideshow">
-          
+
             <img class="arrow" src="assets/arrows/left_arrow.png" alt="Left">
             <h2 id="slideshow-caption" class="light">Alexis Avalos, Typography Book</h2>
+            <img src=""assets/images/AA_Page_I.png" alt="design-pic"" alt="Pic" />
             <img class="arrow" src="assets/arrows/right_arrow.png" alt="Right">
         </header>
 
         <section class="center">
-        
+
             <h2 id="intro">Nessst is a network showcasing student solutions from Eastern Washington University</h2>
             <div class="tiled-gallery">
                 <img class="pic" src="assets/images/dailies.png" alt="design-pic">
@@ -104,7 +105,7 @@
             </div>
         </section>
 
-    </footer> 
+    </footer>
 
 </body>
 </html>
